--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "gulp": "~3.8.10"
   },
   "dependencies": {
+    "del": "^0.1.3",
+    "gulp-rename": "^1.2.0",
     "vinyl-source-stream": "^1.0.0",
     "browserify": "^8.1.0",
     "watchify": "^2.2.1",
     "reactify": "^0.17.1",
-    "react": "^0.12.2"
+    "react": "^0.12.2",
+    "gulp-sass": "~1.3.1",
+    "gulp-minify-css": "~0.3.12",
+    "gulp-sourcemaps": "~1.3.0"
   }
 }
